--- a/Lab1V/Lab4/array.html
+++ b/Lab1V/Lab4/array.html
@@ -7,6 +7,12 @@
 	<title>Array</title>
 </head>
 <body>
+	<h2>Введіть кількість елементів одновимірного масиву</h2>
+	<h1><input type="text" placeholder="Кількість" id="size"></h1>
+	<button onclick="array()">Start</button>
+
+	<div id="input"></div>
+	<div id="output1"></div>
 	<h2>Дана частина сортує введені числа та виводить кількість, між максимальним та мінімальним значеннями</h2>
 	<button onclick="creare_input()">Start</button>
 	<h1>	<input type=search placeholder="Ввід" id="num"></h1>
